# Team4-ChessPuzzleGame

./: .gitignore  README.md  ZacharyCHeck.md  board.py  button.py  chessgame.spec  constants.py  db.py  docker-compose.yml  entry_point.py  game.py  gameDefinitions.json  index.html  login.py  main.py  piece.py  queen.py  requirements.txt  service.py
.github/workflows/: docker-image.yml
backend/: .flaskenv  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  examples.http  gunicorn_config.py  pyproject.toml  requirements.txt
backend/chess/: __init__.py  models.py  routes.py
backend/migrations/versions/: 7832815657df_.py  e9d3f316f54e_.py
backend/tests/: conftest.py  test_user.py
backtracking/: backtracking.py  bishop.py  piece.py  queen.py  rook.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
frontend/: build.sh  entry_point.py  requirements.txt
frontend/chess/: bishop.py  board.py  game.py  login.py  main.py  piece.py  queen.py  rook.py  service.py
frontend/chess/assets/: build.sh
jamesVirtualEnvironment/: pyvenv.cfg
jamesVirtualEnvironment/Scripts/: activate  activate.bat
tests/integration/: test_db.py  test_service.py
